[build-system]
requires = [
    "poetry-core>=1.7.0",
    "poetry-dynamic-versioning>=1.0.0,<2.0.0",
]
build-backend = "poetry_dynamic_versioning.backend"


[tool.poetry]
requires-poetry = "2.1.3"
name = "hiveio-test-tools"
version = "0.0.0"
description = "Tools for testing hive software"
authors = ["Piotr Batko <pbatko@syncad.com>"]
readme = "readme.md"
repository = "https://gitlab.syncad.com/hive/test-tools"
source = [
    { name = "gitlab-hive", url = "https://gitlab.syncad.com/api/v4/groups/136/-/packages/pypi/simple", priority = "primary" },
]
packages = [
    { include = "test_tools", from = "package" },
]


[tool.poetry.dependencies]
python = ">=3.12,<4"
python-dateutil = ">=2.8.2"
abstractcp = ">=0.9.9"
msgspec = ">=0.20.0"
loguru = ">=0.7.2"
hiveio-wax = "==2.0.1.post20260212113915"
hiveio-beekeepy = ">=1.28.5"
hiveio-schemas = ">=1.28.1"


[tool.poetry.group.static-analysis.dependencies]
mypy = ">=1.11.2"
pre-commit = ">=2.21.0"
ruff = ">=0.6.5"

[tool.poetry.group.dev.dependencies]
local-tools = { path = "tests/local-tools", develop = true }
pytest = ">=8.3.5"
pytest-xdist = ">=3.6.1"


[tool.poetry-dynamic-versioning]
enable = true
pattern = "default-unprefixed"
# PEP 440 compliant versioning with .post{timestamp}
# https://peps.python.org/pep-0440/
#
# Version examples (assuming last tag is 1.0.0):
#   Tag (distance=0, clean):       1.0.0
#   Tag (distance=0, dirty):       1.0.0+dirty
#   develop (distance>0):          1.0.0.post20260130132734
#   develop (dirty):               1.0.0.post20260130132734+dirty
#   feature branch (distance>0):   1.0.0.post20260130132734.dev0+unstable
#   feature branch (dirty):        1.0.0.post20260130132734.dev0+unstable.dirty
#
# Logic:
#   - distance=0         -> exact tag version
#   - distance>0, stable -> tag + .post{timestamp}
#   - distance>0, unstable -> tag + .post{timestamp}.dev0+unstable
#   - dirty              -> + 'dirty' marker
#
# Stability detection:
#   - stable: develop/master/main branches OR tag checkout (detached HEAD with distance=0)
#   - unstable: feature branches OR detached HEAD with distance>0
#   - CI: GitLab checks out as detached HEAD, so branch is None;
#     use CI_COMMIT_REF_NAME env var as fallback for branch detection
format-jinja = """
    {%- set STABLE_BRANCHES = ['develop', 'master', 'main'] -%}

    {%- set effective_branch = branch or env.get('CI_COMMIT_REF_NAME') -%}
    {%- set is_on_tag = distance == 0 -%}
    {%- set is_after_tag = distance > 0 -%}
    {%- set is_tag_checkout = branch is none and is_on_tag -%}
    {%- set is_stable = effective_branch in STABLE_BRANCHES or is_tag_checkout -%}
    {%- set is_feature_branch = is_after_tag and not is_stable -%}

    {%- set post = timestamp|int if is_after_tag else none -%}
    {%- set dev = 0 if is_feature_branch else none -%}
    {%- set local_parts = ['unstable'] if is_feature_branch else [] -%}
    {%- set local_parts = local_parts + ['dirty'] if dirty else local_parts -%}

    {{ serialize_pep440(base, stage, revision, post=post, dev=dev, metadata=local_parts) }}
"""

[tool.poetry-dynamic-versioning.substitution]
files = ["package/test_tools/__init__.py"]


[tool.ruff]
line-length = 120

[tool.ruff.lint]
# https://beta.ruff.rs/docs/rules/
select = [
    "F",
    "E",
    "W",
    "C",
    "I",
    "N",
    "D",
    "UP",
    "YTT",
    "ASYNC",
    "BLE",
    "B",
    "A",
    "C4",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "RSE",
    "RET",
    "SIM",
    "TID",
    "TCH",
    "ARG",
    "PTH",
    "ERA",
    "PL",
    "TRY",
    "FLY",
    "RUF",
]
ignore = [
    "E501", # line too long, handled by ruff format
    "D203", # 1 blank line required before class docstring; because we re using D211
    "D212", # Multi-line docstring summary should start at the first line; because we re using D213
    "D401", # first line should be in imperative mood
    "PT004", # fixture does not return anything, add leading underscore;  issue: pytest seems to ignore (not launch) auto-use fixtures with leading underscode

    "TRY003", # too restrictive
    "PLR0913", # too restrictive, too many arguments to function call

    "D104", # missing docstring in public package
    "D100", # missing docstring in public module
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [  # no need for docstrings in tests
    "D100", # missing docstring in public module
    "D101", # missing docstring in public class
    "D102", # missing docstring in public method
    "D103", # missing docstring in public function
    "D104", # missing docstring in public package
    "D105", # missing docstring in magic method
    "D106", # missing docstring in public nested class
    "D107", # missing docstring in __init__

]
"package/test_tools/__private/hived/api/**" = [
    "TCH001", # API response models cannot be placed in the type checking block
]

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint.isort]
known-first-party = ["helpy", "schemas", "wax"]
required-imports = ["from __future__ import annotations"]


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]


[tool.mypy]
strict = true
disallow_untyped_decorators = false
allow_any_generics = true
