[metadata]
name = test_tools
description = Tools for testing hive software
url = gitlab.syncad.com/hive/test-tools
author = Piotr Batko
author_email = pbatko@syncad.com


[options]
package_dir = =package
packages = find:
python_requires = >=3.8
install_requires =
    requests == 2.27.1
    dynaconf == 3.1.9


[options.extras_require]
dev =
    pytest == 7.1.2
    pylint == 2.12.2
    mypy == 0.961
    black == 22.6.0
    isort[colors] == 5.10.1
    pre-commit == 2.20.0


[options.packages.find]
where = package
